# orc-rs

./: Cargo.toml  build.rs
proto/: orc_proto.proto
src/: compression.rs  fs.rs  lib.rs  orc_proto.rs  reader.rs  ty.rs  version.rs
